navbar edited for 8 bit title and user icon

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="favicon.ico?" type="image/x-icon" />
     <title>StreetByter</title>
     <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/8bit-wonder" type="text/css"/>
     <link
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.1/dist/semantic.min.css"
